@@ -926,6 +926,8 @@ Tools/Demos
 Build
 -----
 
+- Define _BSD_SOURCE, to get access to POSIX extensions on OpenBSD 4.1+.
+
 - Stop supporting AtheOS and cause a build error in configure for the platform.
 
 - Bug #1655392: don't add -L/usr/lib/pythonX.Y/config to the LDFLAGS
